@@ -29,6 +29,10 @@ testing {
 
         targets.configureEach { testTask { dependsOn(":consensus-otter-docker-app:assemble") } }
     }
+
+    suites.register<JvmTestSuite>("testChaos") {
+        targets.configureEach { testTask { dependsOn(":consensus-otter-docker-app:assemble") } }
+    }
 }
 
 testModuleInfo {
@@ -41,6 +45,8 @@ testModuleInfo {
     requires("org.apache.logging.log4j")
     requires("org.assertj.core")
     requires("org.hiero.consensus.utility")
+    requires("org.hiero.consensus.metrics")
+    requires("org.hiero.consensus.roster")
     requires("org.junit.jupiter.params")
     requires("org.mockito")
     requiresStatic("com.github.spotbugs.annotations")
@@ -54,7 +60,25 @@ extensions.getByName<GradleOnlyDirectives>("testOtterModuleInfo").apply {
     runtimeOnly("io.grpc.netty.shaded")
 }
 
-tasks.withType<Test>().configureEach { maxHeapSize = "8g" }
+extensions.getByName<GradleOnlyDirectives>("testChaosModuleInfo").apply {
+    runtimeOnly("io.grpc.netty.shaded")
+}
+
+// Fix testcontainers module system access to commons libraries
+// testcontainers 2.0.2 is a named module but doesn't declare its module-info dependencies
+// We need to grant it access to the commons modules via JVM arguments
+// Note: automatic modules are named from their package names (org.apache.commons.io for commons-io
+// JAR)
+// This is applied to all Test tasks to work across all execution methods (local, CI, etc.)
+tasks.withType<Test>().configureEach {
+    maxHeapSize = "8g"
+    jvmArgs(
+        "--add-reads=org.testcontainers=org.apache.commons.lang3",
+        "--add-reads=org.testcontainers=org.apache.commons.compress",
+        "--add-reads=org.testcontainers=org.apache.commons.io",
+        "--add-reads=org.testcontainers=org.apache.commons.codec",
+    )
+}
 
 // This should probably not be necessary (Log4j issue?)
 // https://github.com/apache/logging-log4j2/pull/3053
